prometheus-operator/base/grafana-ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: grafana-ingress
#   annotations:
#     ingress.kubernetes.io/proxy-body-size: 100M
#     kubernetes.io/ingress.class: "nginx"
#     ingress.kubernetes.io/app-root: "/"
# spec:
#   tls:
#   - hosts:
#     - grafana.apps.argoproj.io
#     secretName: grafana-tls
#   rules:
#   - host: grafana.apps.argoproj.io
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: prometheus-operator-grafana
#           servicePort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
      - grafana.localhost
    secretName: grafana-tls-secret
  rules:
  - host: grafana.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: prometheus-grafana
            port:
              number: 80
